media/com_emundus_vue/app_emundus.css
/* ... */
.form-builder-page-section-element label.btn-default.btn.btn-danger.active {
  height: var(--em-form-yesno-height);
  padding: var(--p-12);
  box-shadow: none;
  cursor: pointer;
  background-color: var(--em-form-yesno-bgc-no);
  border-color: var(--em-form-yesno-bc-no);
  color: var(--em-form-yesno-color-no);
  border-radius: var(--em-applicant-br) !important;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 16px;
  font-style: normal;
  line-height: 24px;
  letter-spacing: 0.0015em;
  width: var(--em-form-yesno-width) !important;
}
.form-builder-page-section-element label.btn-default.btn.btn-danger.active:hover {
  background-color: var(--em-form-yesno-bgc-no-hover);
  border-color: var(--em-form-yesno-bc-no-hover) !important;
}
.form-builder-page-section-element label.btn-default.btn.btn-danger.active:hover span {
  font-family: var(--em-profile-font), Inter, sans-serif;
  font-size: 16px;
  font-style: normal;
  line-height: 24px;
  letter-spacing: 0.0015em;
  color: var(--em-form-yesno-color-no-hover);
  word-wrap: break-word;
}
.form-builder-page-section-element label.btn-default.btn.btn-danger.active span {
  font-family: var(--em-profile-font), Inter, sans-serif;
  font-size: 16px;
  font-style: normal;
  line-height: 24px;
  letter-spacing: 0.0015em;
  color: var(--em-form-yesno-color-no);
  word-wrap: break-word;
}
.form-builder-page-section-element label.btn-default.btn:not(.active) {
  height: var(--em-form-yesno-height);
  padding: var(--p-12);
  box-shadow: none;
  cursor: pointer;
  border: var(--em-form-yesno-bw) solid var(--em-form-yesno-bc-not-active);
  background: var(--em-form-yesno-bgc-not-active);
  color: var(--em-form-yesno-color-not-active);
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 16px;
  line-height: 24px;
  font-style: normal;
  letter-spacing: 0.0015em;
  width: var(--em-form-yesno-width) !important;
}
.form-builder-page-section-element label.btn-default.btn:not(.active):hover {
  background-color: var(--em-form-yesno-bgc-not-active-hover);
  border-color: var(--em-form-yesno-bc-not-active-hover) !important;
}
.form-builder-page-section-element label.btn-default.btn:not(.active):hover span {
  font-family: var(--em-profile-font), Inter, sans-serif;
  font-size: 16px;
  font-style: normal;
  line-height: 24px;
  letter-spacing: 0.0015em;
  color: var(--em-form-yesno-color-not-active-hover);
  word-wrap: break-word;
}
.form-builder-page-section-element label.btn-default.btn:not(.active) span {
  font-family: var(--em-profile-font), Inter, sans-serif;
  font-size: 16px;
  font-style: normal;
  line-height: 24px;
  letter-spacing: 0.0015em;
  color: var(--em-form-yesno-color-not-active);
  word-wrap: break-word;
}
.form-builder-page-section-element .fabrikElementpanel .fabrikElement .fabrikinput {
  display: flex;
  padding: var(--em-spacing-5);
  border-radius: 0.25rem;
}
.form-builder-page-section-element .fabrikElementpanel .fabrikElement .fabrikinput .fabrikElementContent {
  margin-left: var(--em-spacing-3);
  line-height: 24px;
}.form-builder-page-section .section-actions-wrapper {
  min-width: -moz-fit-content;
  min-width: fit-content;
}
.form-builder-page-section .section-card .section-identifier {
  color: white;
  padding: 8px 24px;
  border-radius: 4px 4px 0px 0px;
  display: flex;
  align-self: flex-end;
}
.form-builder-page-section .section-card .section-content {
  border-top: 4px solid var(--em-profile-color);
  background-color: white;
  transition: all 0.3s ease-in-out;
  border-radius: calc(var(--em-default-br) / 2) 0 calc(var(--em-default-br) / 2) calc(var(--em-default-br) / 2);
}
.form-builder-page-section .section-card .section-content:hover .hover-opacity {
  opacity: 1;
  pointer-events: all;
}
.form-builder-page-section .section-card .section-content .hover-opacity {
  opacity: 0;
  pointer-events: none;
  transition: all 0.3s;
}
.form-builder-page-section .section-card .section-content #section-title {
  font-weight: 800;
  font-size: 20px;
  line-height: 25px;
}
.form-builder-page-section .section-card .section-content .empty-section-element {
  border: 1px dashed;
  opacity: 0.2;
  padding: 11px;
  margin: 32px 0 0 0;
}#form-builder-page {
  width: calc(100% - 80px);
  margin: 40px 40px;
}
#form-builder-page .description {
  display: block;
}
#form-builder-page #add-section {
  width: -moz-fit-content;
  width: fit-content;
  margin: auto;
}#form-builder-create-page[data-v-2c2ce8ff] {
  height: calc(100vh - 42px);
  overflow-y: auto;
  background-color: #F2F2F3;
}
#form-builder-create-page .line-head[data-v-2c2ce8ff] {
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  width: -moz-fit-content;
  width: fit-content;
  color: white !important;
}
#form-builder-create-page .line[data-v-2c2ce8ff] {
  height: 4px;
}
#form-builder-create-page .card-wrapper[data-v-2c2ce8ff] {
  width: 150px;
}
#form-builder-create-page .card-wrapper .em-shadow-cards[data-v-2c2ce8ff] {
  background-color: white;
  width: 150px;
  border: 2px solid transparent;
}
#form-builder-create-page .card-wrapper .card[data-v-2c2ce8ff] {
  margin: 24px 0 12px 0;
}
#form-builder-create-page .card-wrapper p[data-v-2c2ce8ff] {
  text-align: center;
  border-radius: 4px;
  padding: 4px;
  transition: all 0.3s;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 12px;
}
#form-builder-create-page .card-wrapper input[data-v-2c2ce8ff] {
  width: 150px;
  height: 20px;
  font-size: 12px;
  border: 0;
  text-align: center;
}
#form-builder-create-page .card-wrapper.selected .em-shadow-cards[data-v-2c2ce8ff] {
  border: 2px solid var(--em-profile-color);
}
#form-builder-create-page .card-wrapper.selected p[data-v-2c2ce8ff], #form-builder-create-page .card-wrapper.selected input[data-v-2c2ce8ff] {
  color: white !important;
  background-color: var(--em-profile-color) !important;
}
/* ... */

